# BetaZero

./: .gitignore  CMakeLists.txt  READMD.md  README.md
baseline/: README.md  minimax.cpp
doc/: notes.md
include/: BatchNeuralNetwork.hpp  BoardGame.h  Gomoku.hpp  MCTS.hpp  ModelEvaluator.hpp  NeuralNetwork.hpp  NeuralNetworkMCTS.hpp  Othello.hpp  PureMCTS.hpp  README.md  SelfPlay.hpp  TrainingData.hpp
models_backup/: README.md
paper/: README.md
py/: README.md  config.py  data_handler.py  gomoku_neural_net.py  main.py  test_data_handler.py  trainer.py  utils.py
python/: Chess.py  MCTS.py  human_play.py  main.py  mcts.py  mcts2.py  mcts3.py  model.py  neural_net.py  othello.py  pit.py  tictac.py  train.py  ui.py
src/: MCTS.h  MCTS_1.h  MCTS_2.h  MCTS_2_vector.h  MCTS_Next.h  Othello.cpp  Othello.h  README.md  Tictac.cpp  Tictac.h  chess.cpp  chess.h  main.cpp  merge.py  test.cpp
